--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +21,10 @@
         <activity android:name=".MainButtonThreeActivity" />
         <activity android:name=".MainButtonFourActivity" />
         <activity android:name=".MainButtonFiveActivity" />
-        <activity android:name=".MainButttonSixActivity"></activity>
+        <activity android:name=".MainButttonSixActivity" />
+        <activity android:name=".MainButtonOneLevelActivity" />
+        <activity android:name=".MainButtonThreeLevelOneActivity" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
